fix: responsiveness - wrapper too larger for smaller view ports

--- a/main.css
+++ b/main.css
@@ -304,4 +304,7 @@ footer i{
    footer{
       font-size: smaller;
    }
+   .wrapper{
+      width: 60%;
+   }
  }
